--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -72,7 +72,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label "Expirey Date" %>
+    <%= f.label "Expiry Date" %>
     <%= f.date_select :offer_expirey_date, class: "form-control" %>
   </div>
 
