--- a/app/views/pins/all_invoices.html.erb
+++ b/app/views/pins/all_invoices.html.erb
@@ -29,7 +29,7 @@
       <th><%= sortable "offer_amount", "Offer Amount" %></th>
       <th><%= sortable "saving", "Potential Saving" %></th>
       <th><%= sortable "offer_sent_date", "Offer Sent Date" %></th>
-      <th><%= sortable "offer_expirey_date", "Offer Expirey Date" %></th>
+      <th><%= sortable "offer_expirey_date", "Offer Expiry Date" %></th>
       <th><%= sortable "offer_accepted_date", "Offer Accepted Date" %></th>
       <th><%= sortable "customer_name", "Customer" %></th>
       <th>Edit</th>
