--- a/app/views/pins/pendingoffers.html.erb
+++ b/app/views/pins/pendingoffers.html.erb
@@ -24,7 +24,7 @@
       <th><%= sortable "prop_settlement_date", "Proposed Settlement Date" %></th>
       <th><%= sortable "offer_amount", "Offer Amount" %></th>
       <th><%= sortable "saving", "Potential Saving" %></th>
-      <th><%= sortable "offer_expirey_date", "Offer Expirey Date" %></th>
+      <th><%= sortable "offer_expirey_date", "Offer Expiry Date" %></th>
     </tr>
   </thead>
   <tbody>
