--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,18 +14,16 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "About", root_path %></li>
+            <li><%= link_to "FAQ's", faqs_path %></li>        
           <% if user_signed_in? %>
-            <li><%= link_to "Admin Panel", all_invoices_path %></li>
             <li><%= link_to "Dashboard", offersreceived_path %></li>
+            <li><%= link_to "(Admin Panel)", all_invoices_path %></li>
             <li><%#= link_to "Account Settings", edit_user_registration_path %></li>
-            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "(Log out)", destroy_user_session_path, method: :delete %></li>
           <% else %>
-            <li><%= link_to "Home", root_path %></li>
-            <li><%#= link_to "Team", team_path %></li>
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Supplier Log in", new_user_session_path %></li>
+            <li><%= link_to "(Log in)", new_user_session_path %></li>
           <% end %>
-
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
